--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/bangDiemView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/bangDiemView.fxml
@@ -39,8 +39,8 @@
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="0.0" prefWidth="79.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="0.0" prefWidth="23.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="79.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="101.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="26.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="127.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="0.0" prefWidth="0.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -48,62 +48,62 @@
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label fx:id="diemNguVanHopLe" text="Ngữ Văn" GridPane.columnIndex="1">
+                <Label fx:id="nguVan_Lb" text="Ngữ Văn" GridPane.columnIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemVatLiHopLe" text="Vật lí" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Label fx:id="vatLi_Lb" text="Vật lí" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemToanHopLe" text="Toán" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <Label fx:id="toan_Lb" text="Toán" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemHoaHocHopLe" text="Hóa học" GridPane.columnIndex="4">
+                <Label fx:id="hoaHoc_Lb" text="Hóa học" GridPane.columnIndex="4">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemSinhHocHopLe" text="Sinh học" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                <Label fx:id="sinhHoc_Lb" text="Sinh học" GridPane.columnIndex="4" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Thể dục" GridPane.columnIndex="10" GridPane.rowIndex="1">
+                <Label fx:id="theDuc_Lb" text="Thể dục" GridPane.columnIndex="10" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemDiaLyHopLe" text="Địa lý" GridPane.columnIndex="7">
+                <Label fx:id="diaLy_Lb" text="Địa lý" GridPane.columnIndex="7">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemLichSuHopLe" text="Lịch sử" GridPane.columnIndex="4" GridPane.rowIndex="2">
+                <Label fx:id="lichSu_Lb" text="Lịch sử" GridPane.columnIndex="4" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemGDCDHopLe" text="GDCD" GridPane.columnIndex="7" GridPane.rowIndex="1">
+                <Label fx:id="GDCD_Lb" text="GDCD" GridPane.columnIndex="7" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemNgoaiNguHopLe" text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
+                <Label fx:id="ngoaiNgu_Lb" text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemTinHocHopLe" text="Tin học" GridPane.columnIndex="10">
+                <Label fx:id="tinHoc_Lb" text="Tin học" GridPane.columnIndex="10">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diemCongNgheHopLe" text="Công nghệ" GridPane.columnIndex="7" GridPane.rowIndex="2">
+                <Label fx:id="congNghe_Lb" text="Công nghệ" GridPane.columnIndex="7" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -127,7 +127,7 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></ComboBox>
-                <Label prefHeight="17.0" prefWidth="79.0" text="Hạnh kiểm" GridPane.columnIndex="15">
+                <Label fx:id="hanhKiem_Lb" prefHeight="17.0" prefWidth="79.0" text="Hạnh kiểm" GridPane.columnIndex="15">
                    <font>
                       <Font size="14.0" />
                    </font>
@@ -136,6 +136,18 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></RadioButton>
+            <Label prefHeight="17.0" prefWidth="79.0" text="Điểm TB" GridPane.columnIndex="15" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="diemTb_TF" editable="false" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="16" GridPane.rowIndex="2" />
+            <Label text="Ghi chú" GridPane.columnIndex="15" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="ghiChuDiem_TF" GridPane.columnIndex="16" GridPane.rowIndex="1" />
             </children>
         </GridPane>
         <Button layoutX="441.0" layoutY="333.0" mnemonicParsing="false" onAction="#lamMoiDiem" prefHeight="35.0" prefWidth="90.0" text="Làm Mới">
@@ -146,7 +158,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
         </Button>
-        <Button layoutX="555.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
+        <Button onAction="#capNhatDiem" layoutX="555.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
             <font>
                 <Font size="15.0" />
             </font>
@@ -173,7 +185,7 @@
                 <TableColumn fx:id="tenColumn" minWidth="0.0" prefWidth="60.0" text="Tên" />
                 <TableColumn fx:id="ngaySinhColumn" prefWidth="75.0" text="Ngày Sinh" />
                 <TableColumn fx:id="gioiTinhColumn" prefWidth="54.0" text="Nam" />
-                <TableColumn fx:id="lopColumn" prefWidth="61.0" text="Lớp" />
+                <TableColumn fx:id="lopColumn" prefWidth="30.0" text="Lớp" />
                 <TableColumn fx:id="nguVanColumn" prefWidth="37.0" text="NV" />
                 <TableColumn fx:id="toanColumn" prefWidth="37.0" text="T" />
                 <TableColumn fx:id="vatLiColumn" prefWidth="37.0" text="VL" />
@@ -186,52 +198,82 @@
                 <TableColumn fx:id="tinHocColumn" prefWidth="37.0" text="TH" />
                 <TableColumn fx:id="theDucColumn" prefWidth="37.0" text="TD" />
                 <TableColumn fx:id="ngoaiNguColumn" prefWidth="37.0" text="NN" />
+                <TableColumn fx:id="diemTbColumn" prefWidth="37.0" text="TB" />
                 <TableColumn fx:id="maNNColumn" prefWidth="54.0" text="Mã NN" />
                 <TableColumn fx:id="hocLucColumn" prefWidth="37.0" text="HL" />
                 <TableColumn fx:id="hanhKiemColumn" prefWidth="41.0" text="HK" />
-                <TableColumn fx:id="ghiChuColumn" prefWidth="79.0" text="Ghi chú" />
+                <TableColumn fx:id="ghiChuColumn" prefWidth="74.0" text="Ghi chú" />
             </columns>
         </TableView>
         <!--         <ChoiceBox fx:id="bangDiem_CB" layoutX="10.0" layoutY="375.0" prefHeight="25.0" prefWidth="138.0" />-->
         <GridPane layoutX="10.0" layoutY="107.0" minWidth="1180.0" prefHeight="25.0" prefWidth="1180.0">
             <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.0" minWidth="68.0" prefWidth="105.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" prefWidth="36.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="55.0" prefWidth="294.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="324.0" minWidth="10.0" prefWidth="55.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="17.0" prefWidth="103.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="264.0" minWidth="10.0" prefWidth="89.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="0.0" prefWidth="0.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="72.0" prefWidth="110.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="64.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="244.0" minWidth="10.0" prefWidth="244.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="65.0" minWidth="65.0" prefWidth="65.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="88.0" minWidth="88.0" prefWidth="88.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="220.0" prefWidth="220.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="43.0" minWidth="43.0" prefWidth="43.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="46.0" minWidth="46.0" prefWidth="46.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="83.0" prefWidth="83.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="50.0" prefWidth="50.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="244.0" minWidth="100.0" prefWidth="177.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label fx:id="maHS_Lb" prefHeight="38.0" prefWidth="120.0" text="Mã HS" GridPane.columnIndex="1">
+                <Label fx:id="maHS_Lb" prefHeight="38.0" prefWidth="120.0" GridPane.columnIndex="2">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-                <Label fx:id="lop_Lb" prefHeight="26.0" prefWidth="67.0" text="Lớp" GridPane.columnIndex="5">
+                <Label fx:id="lop_Lb" prefHeight="26.0" prefWidth="67.0" GridPane.columnIndex="8">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-                <Label fx:id="ngaySinh_Lb" prefHeight="26.0" prefWidth="129.0" text="Ngày Sinh" GridPane.columnIndex="10">
+                <Label fx:id="ngaySinh_Lb" prefHeight="26.0" prefWidth="129.0" GridPane.columnIndex="14">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-                <Label fx:id="hoTen_Lb" prefHeight="26.0" prefWidth="334.0" text="Họ và tên" GridPane.columnIndex="3">
+                <Label fx:id="hoTen_Lb" prefHeight="26.0" prefWidth="230.0" GridPane.columnIndex="5">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-            <Label fx:id="gioiTinh_Lb" prefHeight="26.0" prefWidth="83.0" text="Giới Tính" GridPane.columnIndex="8">
+            <Label fx:id="gioiTinh_Lb" prefHeight="26.0" prefWidth="83.0" GridPane.columnIndex="11">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Mã HS:" GridPane.columnIndex="1">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Họ và tên:" GridPane.columnIndex="4">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Lớp:" GridPane.columnIndex="7">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Giới Tính:" GridPane.columnIndex="10">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label prefHeight="26.0" prefWidth="85.0" text="Ngày Sinh:" GridPane.columnIndex="13">
                <font>
                   <Font size="17.0" />
                </font>
