--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/bangDiemView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/bangDiemView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller.BangDiemController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller.GradeReportController">
     <children>
         <Label layoutX="486.0" layoutY="14.0" text="Quản Lý Học Sinh" textFill="#da3d3d">
             <font>
@@ -48,91 +48,91 @@
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label fx:id="nguVan_Lb" text="Ngữ Văn" GridPane.columnIndex="1">
+                <Label fx:id="literature_Lb" text="Ngữ Văn" GridPane.columnIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="vatLi_Lb" text="Vật lí" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Label fx:id="physics_Lb" text="Vật lí" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="toan_Lb" text="Toán" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <Label fx:id="maths_Lb" text="Toán" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="hoaHoc_Lb" text="Hóa học" GridPane.columnIndex="4">
+                <Label fx:id="chemistry_Lb" text="Hóa học" GridPane.columnIndex="4">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="sinhHoc_Lb" text="Sinh học" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                <Label fx:id="biology_Lb" text="Sinh học" GridPane.columnIndex="4" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="theDuc_Lb" text="Thể dục" GridPane.columnIndex="10" GridPane.rowIndex="1">
+                <Label text="Thể dục" GridPane.columnIndex="10" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="diaLy_Lb" text="Địa lý" GridPane.columnIndex="7">
+                <Label fx:id="geography_Lb" text="Địa lý" GridPane.columnIndex="7">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="lichSu_Lb" text="Lịch sử" GridPane.columnIndex="4" GridPane.rowIndex="2">
+                <Label fx:id="history_Lb" text="Lịch sử" GridPane.columnIndex="4" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="GDCD_Lb" text="GDCD" GridPane.columnIndex="7" GridPane.rowIndex="1">
+                <Label fx:id="civicEdu_Lb" text="GDCD" GridPane.columnIndex="7" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="ngoaiNgu_Lb" text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
+                <Label fx:id="foreignLanguage_Lb" text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="tinHoc_Lb" text="Tin học" GridPane.columnIndex="10">
+                <Label fx:id="computerScience_Lb" text="Tin học" GridPane.columnIndex="10">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="congNghe_Lb" text="Công nghệ" GridPane.columnIndex="7" GridPane.rowIndex="2">
+                <Label fx:id="technology_Lb" text="Công nghệ" GridPane.columnIndex="7" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="nguVan_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" />
-                <TextField fx:id="toan_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <TextField fx:id="vatLi_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                <TextField fx:id="hoaHoc_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" />
-                <TextField fx:id="sinhHoc_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                <TextField fx:id="lichSu_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                <TextField fx:id="diaLy_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" />
-                <TextField fx:id="GDCD_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="1" />
-                <TextField fx:id="ngoaiNgu_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" GridPane.rowIndex="2" />
-                <TextField fx:id="congNghe_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="2" />
-                <TextField fx:id="tinHoc_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" />
-                <ComboBox fx:id="maNN_CB" prefWidth="150.0" promptText="Mã NN" GridPane.columnIndex="13" GridPane.rowIndex="2">
+                <TextField fx:id="literature_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" />
+                <TextField fx:id="maths_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                <TextField fx:id="physics_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                <TextField fx:id="chemistry_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" />
+                <TextField fx:id="biology_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                <TextField fx:id="history_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                <TextField fx:id="geography_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" />
+                <TextField fx:id="civicEdu_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+                <TextField fx:id="foreignLanguage_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" GridPane.rowIndex="2" />
+                <TextField fx:id="technology_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+                <TextField fx:id="computerScience_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" />
+                <ComboBox fx:id="languageCode_CB" prefWidth="150.0" promptText="Mã NN" GridPane.columnIndex="13" GridPane.rowIndex="2">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></ComboBox>
-                <ComboBox fx:id="hanhKiem_CB" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" promptText="HK" GridPane.columnIndex="16">
+                <ComboBox fx:id="conduct_CB" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" promptText="HK" GridPane.columnIndex="16">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></ComboBox>
-                <Label fx:id="hanhKiem_Lb" prefHeight="17.0" prefWidth="79.0" text="Hạnh kiểm" GridPane.columnIndex="15">
+                <Label fx:id="conduct_Lb" prefHeight="17.0" prefWidth="79.0" text="Hạnh kiểm" GridPane.columnIndex="15">
                    <font>
                       <Font size="14.0" />
                    </font>
                 </Label>
-                <RadioButton fx:id="theDuc_Btn" mnemonicParsing="false" prefHeight="17.0" prefWidth="63.0" text="Đạt" GridPane.columnIndex="11" GridPane.rowIndex="1">
+                <RadioButton fx:id="physicalEducation_Btn" mnemonicParsing="false" prefHeight="17.0" prefWidth="63.0" text="Đạt" GridPane.columnIndex="11" GridPane.rowIndex="1">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></RadioButton>
@@ -141,16 +141,16 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="diemTb_TF" editable="false" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="16" GridPane.rowIndex="2" />
+            <TextField fx:id="averageGrade_TF" editable="false" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="16" GridPane.rowIndex="2" />
             <Label text="Ghi chú" GridPane.columnIndex="15" GridPane.rowIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="ghiChuDiem_TF" GridPane.columnIndex="16" GridPane.rowIndex="1" />
+            <TextField fx:id="gradeNotes_TF" GridPane.columnIndex="16" GridPane.rowIndex="1" />
             </children>
         </GridPane>
-        <Button layoutX="441.0" layoutY="333.0" mnemonicParsing="false" onAction="#lamMoiDiem" prefHeight="35.0" prefWidth="90.0" text="Làm Mới">
+        <Button layoutX="441.0" layoutY="333.0" mnemonicParsing="false" onAction="#refreshGrades" prefHeight="35.0" prefWidth="90.0" text="Làm Mới">
             <font>
                 <Font size="15.0" />
             </font>
@@ -158,7 +158,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
         </Button>
-        <Button onAction="#capNhatDiem" layoutX="555.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
+        <Button onAction="#updateGrade" layoutX="555.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
             <font>
                 <Font size="15.0" />
             </font>
@@ -177,32 +177,32 @@
             </font>
         </Label>
         <TextField layoutX="963.0" layoutY="369.0" prefHeight="30.0" prefWidth="227.0" promptText="toán &gt; 9" />
-        <TableView fx:id="tableDiemView" layoutX="10.0" layoutY="403.0" maxWidth="1180.0" minWidth="1180.0" prefHeight="385.0" prefWidth="1180.0">
+        <TableView fx:id="gradeReportTableView" layoutX="10.0" layoutY="403.0" maxWidth="1180.0" minWidth="1180.0" prefHeight="385.0" prefWidth="1180.0">
             <columns>
-                <TableColumn fx:id="sttColumn" prefWidth="40.0" text="STT" />
-                <TableColumn fx:id="maHSColumn" text="Mã HS" />
-                <TableColumn fx:id="hoDemColumn" prefWidth="140.0" text="Họ Đệm" />
-                <TableColumn fx:id="tenColumn" minWidth="0.0" prefWidth="60.0" text="Tên" />
-                <TableColumn fx:id="ngaySinhColumn" prefWidth="75.0" text="Ngày Sinh" />
-                <TableColumn fx:id="gioiTinhColumn" prefWidth="54.0" text="Nam" />
-                <TableColumn fx:id="lopColumn" prefWidth="30.0" text="Lớp" />
-                <TableColumn fx:id="nguVanColumn" prefWidth="37.0" text="NV" />
-                <TableColumn fx:id="toanColumn" prefWidth="37.0" text="T" />
-                <TableColumn fx:id="vatLiColumn" prefWidth="37.0" text="VL" />
-                <TableColumn fx:id="hoaHocColumn" prefWidth="37.0" text="HH" />
-                <TableColumn fx:id="sinhHocColumn" prefWidth="37.0" text="SH" />
-                <TableColumn fx:id="lichSuColumn" prefWidth="37.0" text="LS" />
-                <TableColumn fx:id="diaLyColumn" prefWidth="37.0" text="ĐL" />
-                <TableColumn fx:id="GDCDColumn" prefWidth="46.0" text="GDCD" />
-                <TableColumn fx:id="congNgheColumn" prefWidth="37.0" text="CN" />
-                <TableColumn fx:id="tinHocColumn" prefWidth="37.0" text="TH" />
-                <TableColumn fx:id="theDucColumn" prefWidth="37.0" text="TD" />
-                <TableColumn fx:id="ngoaiNguColumn" prefWidth="37.0" text="NN" />
-                <TableColumn fx:id="diemTbColumn" prefWidth="37.0" text="TB" />
-                <TableColumn fx:id="maNNColumn" prefWidth="54.0" text="Mã NN" />
-                <TableColumn fx:id="hocLucColumn" prefWidth="37.0" text="HL" />
-                <TableColumn fx:id="hanhKiemColumn" prefWidth="41.0" text="HK" />
-                <TableColumn fx:id="ghiChuColumn" prefWidth="74.0" text="Ghi chú" />
+                <TableColumn fx:id="noColumn" prefWidth="40.0" text="STT" />
+                <TableColumn fx:id="studentIDColumn" text="Mã HS" />
+                <TableColumn fx:id="firstNameColumn" prefWidth="140.0" text="Họ Đệm" />
+                <TableColumn fx:id="lastNameColumn" minWidth="0.0" prefWidth="60.0" text="Tên" />
+                <TableColumn fx:id="dateOfBirthColumn" prefWidth="75.0" text="Ngày Sinh" />
+                <TableColumn fx:id="genderColumn" prefWidth="54.0" text="Nam" />
+                <TableColumn fx:id="classNameColumn" prefWidth="30.0" text="Lớp" />
+                <TableColumn fx:id="literatureColumn" prefWidth="37.0" text="NV" />
+                <TableColumn fx:id="mathsColumn" prefWidth="37.0" text="T" />
+                <TableColumn fx:id="physicsColumn" prefWidth="37.0" text="VL" />
+                <TableColumn fx:id="chemistryColumn" prefWidth="37.0" text="HH" />
+                <TableColumn fx:id="biologyColumn" prefWidth="37.0" text="SH" />
+                <TableColumn fx:id="historyColumn" prefWidth="37.0" text="LS" />
+                <TableColumn fx:id="geographyColumn" prefWidth="37.0" text="ĐL" />
+                <TableColumn fx:id="civicEduColumn" prefWidth="46.0" text="GDCD" />
+                <TableColumn fx:id="technologyColumn" prefWidth="37.0" text="CN" />
+                <TableColumn fx:id="computerScienceColumn" prefWidth="37.0" text="TH" />
+                <TableColumn fx:id="physicalEducationColumn" prefWidth="37.0" text="TD" />
+                <TableColumn fx:id="foreignLanguageColumn" prefWidth="37.0" text="NN" />
+                <TableColumn fx:id="averageGradeColumn" prefWidth="37.0" text="TB" />
+                <TableColumn fx:id="languageCodeColumn" prefWidth="54.0" text="Mã NN" />
+                <TableColumn fx:id="academicPerformanceColumn" prefWidth="37.0" text="HL" />
+                <TableColumn fx:id="conductColumn" prefWidth="41.0" text="HK" />
+                <TableColumn fx:id="notesColumn" prefWidth="74.0" text="Ghi chú" />
             </columns>
         </TableView>
         <!--         <ChoiceBox fx:id="bangDiem_CB" layoutX="10.0" layoutY="375.0" prefHeight="25.0" prefWidth="138.0" />-->
@@ -228,27 +228,27 @@
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label fx:id="maHS_Lb" prefHeight="38.0" prefWidth="120.0" GridPane.columnIndex="2">
+                <Label fx:id="studentID_Lb" prefHeight="38.0" prefWidth="120.0" GridPane.columnIndex="2">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-                <Label fx:id="lop_Lb" prefHeight="26.0" prefWidth="67.0" GridPane.columnIndex="8">
+                <Label fx:id="className_Lb" prefHeight="26.0" prefWidth="67.0" GridPane.columnIndex="8">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-                <Label fx:id="ngaySinh_Lb" prefHeight="26.0" prefWidth="129.0" GridPane.columnIndex="14">
+                <Label fx:id="dateOfBirth_Lb" prefHeight="26.0" prefWidth="129.0" GridPane.columnIndex="14">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-                <Label fx:id="hoTen_Lb" prefHeight="26.0" prefWidth="230.0" GridPane.columnIndex="5">
+                <Label fx:id="fullName_Lb" prefHeight="26.0" prefWidth="230.0" GridPane.columnIndex="5">
                     <font>
                         <Font size="17.0" />
                     </font>
                 </Label>
-            <Label fx:id="gioiTinh_Lb" prefHeight="26.0" prefWidth="83.0" GridPane.columnIndex="11">
+            <Label fx:id="gender_Lb" prefHeight="26.0" prefWidth="83.0" GridPane.columnIndex="11">
                <font>
                   <Font size="17.0" />
                </font>
@@ -280,7 +280,7 @@
             </Label>
             </children>
         </GridPane>
-        <ComboBox fx:id="bang_CB" layoutX="10.0" layoutY="369.0" prefHeight="30.0" prefWidth="138.0">
+        <ComboBox fx:id="table_CB" layoutX="10.0" layoutY="369.0" prefHeight="30.0" prefWidth="138.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></ComboBox>
