--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/GradeView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/GradeView.fxml
@@ -93,7 +93,7 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label fx:id="foreignLanguage_Lb" text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
+                <Label fx:id="foreignLang_Lb" text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -116,7 +116,7 @@
                 <TextField fx:id="history_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="2" />
                 <TextField fx:id="geography_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" />
                 <TextField fx:id="civicEdu_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="1" />
-                <TextField fx:id="foreignLanguage_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" GridPane.rowIndex="2" />
+                <TextField fx:id="foreignLang_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" GridPane.rowIndex="2" />
                 <TextField fx:id="technology_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="2" />
                 <TextField fx:id="it_TF" maxWidth="30.0" minWidth="40.0" onKeyReleased="#handleKeyReleased" prefWidth="30.0" GridPane.columnIndex="11" />
                 <ComboBox fx:id="languageCode_CB" prefWidth="150.0" promptText="Mã NN" GridPane.columnIndex="13" GridPane.rowIndex="2">
@@ -132,7 +132,7 @@
                       <Font size="14.0" />
                    </font>
                 </Label>
-                <RadioButton fx:id="physicalEducation_Btn" mnemonicParsing="false" prefHeight="17.0" prefWidth="63.0" text="Đạt" GridPane.columnIndex="11" GridPane.rowIndex="1">
+                <RadioButton fx:id="physicalEdu_Btn" mnemonicParsing="false" prefHeight="17.0" prefWidth="63.0" text="Đạt" GridPane.columnIndex="11" GridPane.rowIndex="1">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></RadioButton>
@@ -158,7 +158,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
         </Button>
-        <Button onAction="#updateGrade" layoutX="555.0" layoutY="333.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
+        <Button layoutX="555.0" layoutY="333.0" mnemonicParsing="false" onAction="#updateGrade" prefHeight="35.0" prefWidth="90.0" text="Cập Nhật">
             <font>
                 <Font size="15.0" />
             </font>
@@ -171,12 +171,12 @@
                 <Font size="15.0" />
             </font>
         </Button>
-        <Label layoutX="895.0" layoutY="374.0" text="Tìm Kiếm">
+        <Label layoutX="826.0" layoutY="374.0" text="Tìm Kiếm">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField layoutX="963.0" layoutY="369.0" prefHeight="30.0" prefWidth="227.0" promptText="toán &gt; 9" />
+        <TextField fx:id="search_TF" layoutX="895.0" layoutY="369.0" onKeyReleased="#search" prefHeight="30.0" prefWidth="295.0" promptText="VD: toán&gt;9, avg&gt;=9, class=A" />
         <TableView fx:id="gradeReportTableView" layoutX="10.0" layoutY="403.0" maxWidth="1180.0" minWidth="1180.0" prefHeight="385.0" prefWidth="1180.0">
             <columns>
                 <TableColumn fx:id="noColumn" prefWidth="40.0" text="STT" />
@@ -196,8 +196,8 @@
                 <TableColumn fx:id="civicEduColumn" prefWidth="46.0" text="GDCD" />
                 <TableColumn fx:id="technologyColumn" prefWidth="37.0" text="CN" />
                 <TableColumn fx:id="itColumn" prefWidth="37.0" text="TH" />
-                <TableColumn fx:id="physicalEducationColumn" prefWidth="37.0" text="TD" />
-                <TableColumn fx:id="foreignLanguageColumn" prefWidth="37.0" text="NN" />
+                <TableColumn fx:id="physicalEduColumn" prefWidth="37.0" text="TD" />
+                <TableColumn fx:id="foreignLangColumn" prefWidth="37.0" text="NN" />
                 <TableColumn fx:id="avgGradeColumn" prefWidth="37.0" text="TB" />
                 <TableColumn fx:id="languageCodeColumn" prefWidth="54.0" text="Mã NN" />
                 <TableColumn fx:id="academicPerformanceColumn" prefWidth="37.0" text="HL" />
