--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/StudentView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/StudentView.fxml
@@ -382,7 +382,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></ComboBox>
-      <TextArea layoutX="895.0" layoutY="284.0" prefHeight="78.0" prefWidth="295.0" text="Tất cả: &quot;Phương&quot;; &quot;12A&quot;;&quot;Hải Dương&quot;&#10;Nhiều điều kiện: &quot;23010360, Cường, 12A&quot;&#10;Theo trường: &quot;tên=Phương, ghichu=bảo lưu&quot;&#10;Lọc (&gt;,&lt;,=): &quot;name&gt;a,class&lt;10,gc=bảo lưu&quot;" />
+      <TextArea layoutX="895.0" layoutY="284.0" prefHeight="78.0" prefWidth="295.0" text="Tất cả: &quot;Phương&quot;; &quot;12A&quot;;&quot;Hải Dương&quot;&#10;Nhiều điều kiện: &quot;23010360, Cường, 12A&quot;&#10;Theo trường: &quot;tên=Phương, ghichu=bảo lưu&quot;&#10;Lọc (&gt;,&lt;,&gt;=,&lt;=,=): &quot;name&gt;a,class&gt;=11,gc=bảo lưu&quot;" />
     </children>
 
 </AnchorPane>
