--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/StudentView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/StudentView.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qlhs.qlhs.Controller.StudentController">
     <children>
@@ -104,13 +104,14 @@
                   <Insets left="2.0" right="2.0" />
                </GridPane.margin>
                 </Label>
-                <RadioButton fx:id="male_Btn" maxHeight="30.0" minHeight="30.0" mnemonicParsing="false" prefHeight="30.0" text="Nam" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                <RadioButton fx:id="male_Btn" maxHeight="30.0" minHeight="30.0" mnemonicParsing="false" onMouseReleased="#handleKeyReleased" prefHeight="30.0" text="Nam" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="2.0" right="2.0" />
                </GridPane.margin>
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor></RadioButton>
+               </cursor>
+                </RadioButton>
                 <Label fx:id="dateOfBirth_Lb" maxHeight="30.0" minHeight="30.0" prefHeight="30.0" text="Ngày Sinh" GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <font>
                         <Font size="14.0" />
@@ -119,9 +120,9 @@
                   <Insets left="2.0" right="2.0" />
                </GridPane.margin>
                 </Label>
-                <DatePicker fx:id="dateOfBirth_Picker" accessibleRole="COMBO_BOX" maxHeight="30.0" minHeight="30.0" prefHeight="30.0" prefWidth="169.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                <DatePicker fx:id="dateOfBirth_Picker" accessibleRole="COMBO_BOX" maxHeight="30.0" minHeight="30.0" onMouseReleased="#handleKeyReleased" prefHeight="30.0" prefWidth="169.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <GridPane.margin>
-                  <Insets left="2.0" right="2.0" />
+                  <Insets />
                </GridPane.margin>
                <cursor>
                   <Cursor fx:constant="HAND" />
@@ -315,7 +316,7 @@
                   <Insets left="180.0" />
                </GridPane.margin>
             </RadioButton>
-            <RadioButton fx:id="female_Btn" mnemonicParsing="false" text="Nữ" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <RadioButton fx:id="female_Btn" mnemonicParsing="false" onMouseReleased="#handleKeyReleased" text="Nữ" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="100.0" />
                </GridPane.margin>
@@ -383,7 +384,10 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></ComboBox>
-      <TextArea layoutX="1040.0" layoutY="285.0" prefHeight="78.0" prefWidth="350.0" text="Tất cả: &quot;Phương&quot;; &quot;12A&quot;;&quot;Hải Dương&quot;&#10;Nhiều điều kiện: &quot;23010360, Cường, 12A&quot;&#10;Theo trường: &quot;tên=Phương, ghichu=bảo lưu&quot;&#10;Lọc (&gt;,&lt;,&gt;=,&lt;=,=): &quot;name&gt;a,class&gt;=11,gc=bảo lưu&quot;" />
+      <Text fill="WHITE" layoutX="1040.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tất cả: &quot;Phương&quot;; &quot;12A&quot;;&quot;Hải Dương&quot;" />
+      <Text fill="WHITE" layoutX="1040.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nhiều điều kiện: &quot;23010360, Cường, 12A&quot;" />
+      <Text fill="WHITE" layoutX="1040.0" layoutY="346.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Theo trường: &quot;tên=Phương, ghichu=bảo lưu&quot;" />
+      <Text fill="WHITE" layoutX="1040.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Toán tử (&gt;,&lt;,&gt;=,&lt;=,=): &quot;name&gt;a,class&gt;=11,gc=bảo lưu&quot;" />
     </children>
 
 </AnchorPane>
