--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/styles.css
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/styles.css
@@ -23,8 +23,8 @@ Label {
 }
 
 TextField {
-    -fx-background-color: #3c3c3c;
-    -fx-text-fill: #dcdcdc;
+    -fx-background-color: #2b2b2b;
+    -fx-text-fill: white;
     -fx-prompt-text-fill: #7d7d7d;
     -fx-border-color: #555555;
 }
